--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,7 @@ nav {
     display: flex;
     justify-content:space-between;
     align-items:center;
+    margin:0 200px;
 
 }
 
@@ -34,10 +35,23 @@ nav a {
     color: rgb(68, 65, 65);
 }
 
-.btn_primary {
+.btn-primary {
     border-radius: 5px;
     background: #ff8935;
     color:white;
     border:none;
     padding: 18px 35px;
+}
+/*  Header ralated style */
+.header{
+background-color:#f8e9de;
+}
+.banner{
+    padding:30px 30px 30px 150px;
+    display:flex;
+    align-items:center;
+}
+
+.banner .profile-pic{
+    width: 500px;
 }
