--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -133,3 +133,12 @@ main section{
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
     
 }
+
+.resume-container{
+    display:flex;
+    gap:50px;
+}
+.download-cv{
+    text-align:center;
+    margin-top:50px;
+}
